--- a/admin.html
+++ b/admin.html
@@ -58,7 +58,7 @@
         <div class="account_title">
             <h2>Панель администратора</h2>
             <div class="inf_account">
-                <button class="numb_account"><span>Добавить стикер</span></button>
+                <button class="numb_account" onclick="document.location='create.html'"><span>Добавить стикер</span></button>
             </div>
         </div>
         <div class="admin_content">
@@ -123,7 +123,7 @@
                     <p>Древолика не любит лишний шум, а ее глаза светятся мягким голубым светом, способные
                         погубить взгядом.</p>
                     <div class="btn_acc">
-                        <a href="#" class="btn_acc">
+                        <a href="edit.html" class="btn_acc">
                             Редактировать
                         </a>
                         <button style="border: none; outline:none; background-color: transparent; cursor: pointer;">
@@ -169,7 +169,7 @@
                         звёзд.
                     </p>
                     <div class="btn_acc">
-                        <a href="#" class="btn_acc">
+                        <a href="edit.html" class="btn_acc">
                             Редактировать
                         </a>
                         <button style="border: none; outline:none; background-color: transparent; cursor: pointer;">
@@ -213,7 +213,7 @@
                     </div>
                     <p>Его тело постоянно горит холодным белым пламенем, а вокруг него витают пепел прошлых жизней.</p>
                     <div class="btn_acc">
-                        <a href="#" class="btn_acc">
+                        <a href="edit.html" class="btn_acc">
                             Редактировать
                         </a>
                         <button style="border: none; outline:none; background-color: transparent; cursor: pointer;">
@@ -257,7 +257,7 @@
                     </div>
                     <p>Её голос способен материализовать любые кошмары, которые слышит жертва.</p>
                     <div class="btn_acc">
-                        <a href="#" class="btn_acc">
+                        <a href="edit.html" class="btn_acc">
                             Редактировать
                         </a>
                         <button style="border: none; outline:none; background-color: transparent; cursor: pointer;">
@@ -301,7 +301,7 @@
                     </div>
                     <p>В финальной битве он предлагает игроку власть над новой реальностью... в обмен на душу</p>
                     <div class="btn_acc">
-                        <a href="#" class="btn_acc">
+                        <a href="edit.html" class="btn_acc">
                             Редактировать
                         </a>
                         <button style="border: none; outline:none; background-color: transparent; cursor: pointer;">
@@ -346,7 +346,7 @@
                     <p>Смотришь в него — а оно смотрит назад из глубины твоего разума и сердца, что метежется во тьме.
                     </p>
                     <div class="btn_acc">
-                        <a href="#" class="btn_acc">
+                        <a href="edit.html" class="btn_acc">
                             Редактировать
                         </a>
                         <button style="border: none; outline:none; background-color: transparent; cursor: pointer;">
