--- a/edit.html
+++ b/edit.html
@@ -115,7 +115,7 @@
             </div>
             <div class="forms_edit_files_right">
                 <p class="zag_content_edit">
-                    Добавить стикер
+                    Редактировать стикер
                 </p>
                 <div class="box_inputs_edit_right">
                     <input type="text" name="title" placeholder="Название" required>
